Se agrega ruta /stats
